# uploading_processing_files

./: .gitignore  Dockerfile  README.md  __init__.py  coverage.xml  docker-compose.yml  dump.rdb  manage.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  main.yml
uploading_processing/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
uploading_processing/files/: apps.py  serializers.py  tasks.py  views.py
uploading_processing/files/migrations/: 0001_initial.py
uploading_processing/tests/: tests.py
uploading_processing_files/: __init__.py  asgi.py  celery.py  settings.py  wsgi.py
uploading_processing_files/files/: apps.py  forms.py  models.py  serializers.py  views.py
uploading_processing_files/templates/: Success.html  upload_file.html
